--- a/connect4_index.html
+++ b/connect4_index.html
@@ -27,14 +27,14 @@
         crossorigin="anonymous"></script>
 
 
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="connect4_main.css" />
 </head>
 
 <body>
-    <h1 id="header"> </h1>
+    <h1 id="header"></h1>
 
     Let's collaborate on building a carousel!
-    <script src="./connect4.js" crossorigin="anonymous"></script>
+    <script src="./connect4_code.js" crossorigin="anonymous"></script>
 
     <div id="connect4Board">
         <div class="row">
