--- a/connect4_index.html
+++ b/connect4_index.html
@@ -1,22 +1,4 @@
-<!---
 
-// stick your cursor here if you are doing nothing (cursor park)
-// khaashif 
-// jiaqi 
-// harri 
-// cynthia  
-// edmund 
-// lucy 
-// anna 
-// Harry P
-// Mariola
-// Tom
-// Yingying
-// Hamza
-// Marco
-//Leena
-//Oishika
---->
 <html>
 
 <head>
@@ -26,70 +8,72 @@
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
 
-
+    <title>Play Connect</title>
     <link rel="stylesheet" href="connect4_main.css" />
 </head>
 
 <body>
     <h1 id="header"></h1>
 
-    Let's collaborate on building a carousel!
+    Welcome to Cynti's Connect 4 Game!
     <script src="./connect4_code.js" crossorigin="anonymous"></script>
-
-    <div id="connect4Board">
-        <div class="row">
-            <div class="col" id="row1-col1" onClick="takeTurn(event);"> # </div>
-            <div class="col" id="row1-col2" onClick="takeTurn(event);"> # </div>
-            <div class="col" id="row1-col3" onClick="takeTurn(event);"> # </div>
-            <div class="col" id="row1-col4" onClick="takeTurn(event);"> # </div>
-            <div class="col" id="row1-col5" onClick="takeTurn(event);"> # </div>
-            <div class="col" id="row1-col6" onClick="takeTurn(event);"> # </div>
-            <div class="col" id="row1-col7" onClick="takeTurn(event);"> # </div>
-        </div>
-        <div class=" row">
-            <div class="col" id="row2-col1" onClick="takeTurn(event);"> # </div>
-            <div class="col" id="row2-col2" onClick="takeTurn(event);"> # </div>
-            <div class="col" id="row2-col3" onClick="takeTurn(event);"> # </div>
-            <div class="col" id="row2-col4" onClick="takeTurn(event);"> # </div>
-            <div class="col" id="row2-col5" onClick="takeTurn(event);"> # </div>
-            <div class="col" id="row2-col6" onClick="takeTurn(event);"> # </div>
-            <div class="col" id="row2-col7" onClick="takeTurn(event);"> # </div>
-        </div>
-        <div class="row">
-            <div class="col" id="row3-col1" onClick="takeTurn(event);"> # </div>
-            <div class="col" id="row3-col2" onClick="takeTurn(event);"> # </div>
-            <div class="col" id="row3-col3" onClick="takeTurn(event);"> # </div>
-            <div class="col" id="row3-col4" onClick="takeTurn(event);"> # </div>
-            <div class="col" id="row3-col5" onClick="takeTurn(event);"> # </div>
-            <div class="col" id="row3-col6" onClick="takeTurn(event);"> # </div>
-            <div class="col" id="row3-col7" onClick="takeTurn(event);"> # </div>
-        </div>
-        <div class="row">
-            <div class=" col" id="row4-col1" onClick="takeTurn(event);"> # </div>
-            <div class=" col" id="row4-col2" onClick="takeTurn(event);"> # </div>
-            <div class=" col" id="row4-col3" onClick="takeTurn(event);"> # </div>
-            <div class=" col" id="row4-col4" onClick="takeTurn(event);"> # </div>
-            <div class=" col" id="row4-col5" onClick="takeTurn(event);"> # </div>
-            <div class=" col" id="row4-col6" onClick="takeTurn(event);"> # </div>
-            <div class=" col" id="row4-col7" onClick="takeTurn(event);"> # </div>
-        </div>
-        <div class="row">
-            <div class="col" id="row5-col1" onClick="takeTurn(event);"> # </div>
-            <div class="col" id="row5-col2" onClick="takeTurn(event);"> # </div>
-            <div class=" col" id="row5-col3" onClick="takeTurn(event);"> # </div>
-            <div class=" col" id="row5-col4" onClick="takeTurn(event);"> # </div>
-            <div class=" col" id="row5-col5" onClick="takeTurn(event);"> # </div>
-            <div class=" col" id="row5-col6" onClick="takeTurn(event);"> # </div>
-            <div class=" col" id="row5-col7" onClick="takeTurn(event);"> # </div>
-        </div>
-        <div class="row">
-            <div class=" col" id="row6-col1" onClick="takeTurn(event);"> # </div>
-            <div class=" col" id="row6-col2" onClick="takeTurn(event);"> # </div>
-            <div class=" col" id="row6-col3" onClick="takeTurn(event);"> # </div>
-            <div class=" col" id="row6-col4" onClick="takeTurn(event);"> # </div>
-            <div class=" col" id="row6-col5" onClick="takeTurn(event);"> # </div>
-            <div class=" col" id="row6-col6" onClick="takeTurn(event);"> # </div>
-            <div class=" col" id="row6-col7" onClick="takeTurn(event);"> # </div>
+   
+    <div id="container">
+        <div id="connect4board">
+            <div class="row">
+                <div class="col" id="row1-col1" onClick="takeTurn(event);"> # </div>
+                <div class="col" id="row1-col2" onClick="takeTurn(event);"> # </div>
+                <div class="col" id="row1-col3" onClick="takeTurn(event);"> # </div>
+                <div class="col" id="row1-col4" onClick="takeTurn(event);"> # </div>
+                <div class="col" id="row1-col5" onClick="takeTurn(event);"> # </div>
+                <div class="col" id="row1-col6" onClick="takeTurn(event);"> # </div>
+                <div class="col" id="row1-col7" onClick="takeTurn(event);"> # </div>
+            </div>
+            <div class=" row">
+                <div class="col" id="row2-col1" onClick="takeTurn(event);"> # </div>
+                <div class="col" id="row2-col2" onClick="takeTurn(event);"> # </div>
+                <div class="col" id="row2-col3" onClick="takeTurn(event);"> # </div>
+                <div class="col" id="row2-col4" onClick="takeTurn(event);"> # </div>
+                <div class="col" id="row2-col5" onClick="takeTurn(event);"> # </div>
+                <div class="col" id="row2-col6" onClick="takeTurn(event);"> # </div>
+                <div class="col" id="row2-col7" onClick="takeTurn(event);"> # </div>
+            </div>
+            <div class="row">
+                <div class="col" id="row3-col1" onClick="takeTurn(event);"> # </div>
+                <div class="col" id="row3-col2" onClick="takeTurn(event);"> # </div>
+                <div class="col" id="row3-col3" onClick="takeTurn(event);"> # </div>
+                <div class="col" id="row3-col4" onClick="takeTurn(event);"> # </div>
+                <div class="col" id="row3-col5" onClick="takeTurn(event);"> # </div>
+                <div class="col" id="row3-col6" onClick="takeTurn(event);"> # </div>
+                <div class="col" id="row3-col7" onClick="takeTurn(event);"> # </div>
+            </div>
+            <div class="row">
+                <div class=" col" id="row4-col1" onClick="takeTurn(event);"> # </div>
+                <div class=" col" id="row4-col2" onClick="takeTurn(event);"> # </div>
+                <div class=" col" id="row4-col3" onClick="takeTurn(event);"> # </div>
+                <div class=" col" id="row4-col4" onClick="takeTurn(event);"> # </div>
+                <div class=" col" id="row4-col5" onClick="takeTurn(event);"> # </div>
+                <div class=" col" id="row4-col6" onClick="takeTurn(event);"> # </div>
+                <div class=" col" id="row4-col7" onClick="takeTurn(event);"> # </div>
+            </div>
+            <div class="row">
+                <div class="col" id="row5-col1" onClick="takeTurn(event);"> # </div>
+                <div class="col" id="row5-col2" onClick="takeTurn(event);"> # </div>
+                <div class=" col" id="row5-col3" onClick="takeTurn(event);"> # </div>
+                <div class=" col" id="row5-col4" onClick="takeTurn(event);"> # </div>
+                <div class=" col" id="row5-col5" onClick="takeTurn(event);"> # </div>
+                <div class=" col" id="row5-col6" onClick="takeTurn(event);"> # </div>
+                <div class=" col" id="row5-col7" onClick="takeTurn(event);"> # </div>
+            </div>
+            <div class="row">
+                <div class=" col" id="row6-col1" onClick="takeTurn(event);"> # </div>
+                <div class=" col" id="row6-col2" onClick="takeTurn(event);"> # </div>
+                <div class=" col" id="row6-col3" onClick="takeTurn(event);"> # </div>
+                <div class=" col" id="row6-col4" onClick="takeTurn(event);"> # </div>
+                <div class=" col" id="row6-col5" onClick="takeTurn(event);"> # </div>
+                <div class=" col" id="row6-col6" onClick="takeTurn(event);"> # </div>
+                <div class=" col" id="row6-col7" onClick="takeTurn(event);"> # </div>
+            </div>
         </div>
     </div>
 
