--- a/connect4_index.html
+++ b/connect4_index.html
@@ -15,7 +15,7 @@
 <body>
     <h1 id="header"></h1>
 
-    Welcome to Cynti's Connect 4 Game!
+    <h2>Welcome to Cynthia's Connect 4 Game!</h2>
     <script src="./connect4_code.js" crossorigin="anonymous"></script>
    
     <div id="container">
