resetgame button bug

--- a/connect4_index.html
+++ b/connect4_index.html
@@ -86,11 +86,10 @@
     </div>
 
     <div class="button">
-        <div id="reset-button">
-            <button type="button">Start Again</button>
+        <div>
+            <button type="button" name="button" id="reset-button">Start Again</button>
         </div>
     </div>
-
 
 </body>
 
