--- a/connect4_index.html
+++ b/connect4_index.html
@@ -1,96 +1,12 @@
-
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
-
-    <title>Play Connect</title>
-    <link rel="stylesheet" href="connect4_main.css" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Play Connect 4</title>
 </head>
-
 <body>
-    <div class="welcome">
-        <div class="header">
-            <div id="header1">
-                <h1 id="header-play"></h1>
-            </div>
-            <div id="header2">
-                <h2>Cynthia's Connect 4 Game!</h2>
-            </div>
-        </div>
-    </div>
-
-    <script src="./connect4_code.js" crossorigin="anonymous"></script>
-   
-    <div id="container">
-        <div id="connect4board">
-            <div class="row">
-                <div class="col" id="row1-col1" onClick="takeTurn(event);"> # </div>
-                <div class="col" id="row1-col2" onClick="takeTurn(event);"> # </div>
-                <div class="col" id="row1-col3" onClick="takeTurn(event);"> # </div>
-                <div class="col" id="row1-col4" onClick="takeTurn(event);"> # </div>
-                <div class="col" id="row1-col5" onClick="takeTurn(event);"> # </div>
-                <div class="col" id="row1-col6" onClick="takeTurn(event);"> # </div>
-                <div class="col" id="row1-col7" onClick="takeTurn(event);"> # </div>
-            </div>
-            <div class=" row">
-                <div class="col" id="row2-col1" onClick="takeTurn(event);"> # </div>
-                <div class="col" id="row2-col2" onClick="takeTurn(event);"> # </div>
-                <div class="col" id="row2-col3" onClick="takeTurn(event);"> # </div>
-                <div class="col" id="row2-col4" onClick="takeTurn(event);"> # </div>
-                <div class="col" id="row2-col5" onClick="takeTurn(event);"> # </div>
-                <div class="col" id="row2-col6" onClick="takeTurn(event);"> # </div>
-                <div class="col" id="row2-col7" onClick="takeTurn(event);"> # </div>
-            </div>
-            <div class="row">
-                <div class="col" id="row3-col1" onClick="takeTurn(event);"> # </div>
-                <div class="col" id="row3-col2" onClick="takeTurn(event);"> # </div>
-                <div class="col" id="row3-col3" onClick="takeTurn(event);"> # </div>
-                <div class="col" id="row3-col4" onClick="takeTurn(event);"> # </div>
-                <div class="col" id="row3-col5" onClick="takeTurn(event);"> # </div>
-                <div class="col" id="row3-col6" onClick="takeTurn(event);"> # </div>
-                <div class="col" id="row3-col7" onClick="takeTurn(event);"> # </div>
-            </div>
-            <div class="row">
-                <div class=" col" id="row4-col1" onClick="takeTurn(event);"> # </div>
-                <div class=" col" id="row4-col2" onClick="takeTurn(event);"> # </div>
-                <div class=" col" id="row4-col3" onClick="takeTurn(event);"> # </div>
-                <div class=" col" id="row4-col4" onClick="takeTurn(event);"> # </div>
-                <div class=" col" id="row4-col5" onClick="takeTurn(event);"> # </div>
-                <div class=" col" id="row4-col6" onClick="takeTurn(event);"> # </div>
-                <div class=" col" id="row4-col7" onClick="takeTurn(event);"> # </div>
-            </div>
-            <div class="row">
-                <div class="col" id="row5-col1" onClick="takeTurn(event);"> # </div>
-                <div class="col" id="row5-col2" onClick="takeTurn(event);"> # </div>
-                <div class=" col" id="row5-col3" onClick="takeTurn(event);"> # </div>
-                <div class=" col" id="row5-col4" onClick="takeTurn(event);"> # </div>
-                <div class=" col" id="row5-col5" onClick="takeTurn(event);"> # </div>
-                <div class=" col" id="row5-col6" onClick="takeTurn(event);"> # </div>
-                <div class=" col" id="row5-col7" onClick="takeTurn(event);"> # </div>
-            </div>
-            <div class="row">
-                <div class=" col" id="row6-col1" onClick="takeTurn(event);"> # </div>
-                <div class=" col" id="row6-col2" onClick="takeTurn(event);"> # </div>
-                <div class=" col" id="row6-col3" onClick="takeTurn(event);"> # </div>
-                <div class=" col" id="row6-col4" onClick="takeTurn(event);"> # </div>
-                <div class=" col" id="row6-col5" onClick="takeTurn(event);"> # </div>
-                <div class=" col" id="row6-col6" onClick="takeTurn(event);"> # </div>
-                <div class=" col" id="row6-col7" onClick="takeTurn(event);"> # </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="button">
-        <div>
-            <button type="button" name="button" id="reset-button">Start Again</button>
-        </div>
-    </div>
-
+    
 </body>
-
 </html>
