--- a/connect4_index.html
+++ b/connect4_index.html
@@ -8,73 +8,78 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Connect 4</title>
     <link rel="stylesheet" href="connect4_main.css">
-    <script src="connect4_code.js"></script>
 
 </head>
 
 <body>
 
-    <div class="header"><h1>Cynthia's Connect 4 Game!</h1></div>
-    
+    <div class="header">
+        <h1>Cynthia's Connect 4 Game!</h1>
+        <h2>Player turn is: Player<span id="current-player"> Red</span></h2>
+        <h2 id="result"></h2>
+    </div>
+
+    <script src="connect4_code.js"></script>
+
     <div class="grid">
         <div class="row">
-            <div class="slot"></div>
-            <div class="slot"></div>
-            <div class="slot"></div>
-            <div class="slot"></div>
-            <div class="slot"></div>
-            <div class="slot"></div>
-            <div class="slot"></div>
+            <div class="column" id="cell1"></div>
+            <div class="column" id="cell2"></div>
+            <div class="column" id="cell3"></div>
+            <div class="column" id="cell4"></div>
+            <div class="column" id="cell5"></div>
+            <div class="column" id="cell6"></div>
+            <div class="column" id="cell7"></div>
         </div>
 
         <div class="row">
-            <div class="slot"></div>
-            <div class="slot"></div>
-            <div class="slot"></div>
-            <div class="slot"></div>
-            <div class="slot"></div>
-            <div class="slot"></div>
-            <div class="slot"></div>
+            <div class="column" id="cell8"></div>
+            <div class="column" id="cell9"></div>
+            <div class="column" id="cell10"></div>
+            <div class="column" id="cell11"></div>
+            <div class="column" id="cell12"></div>
+            <div class="column" id="cell13"></div>
+            <div class="column" id="cell14"></div>
         </div>
 
         <div class="row">
-            <div class="slot"></div>
-            <div class="slot"></div>
-            <div class="slot"></div>
-            <div class="slot"></div>
-            <div class="slot"></div>
-            <div class="slot"></div>
-            <div class="slot"></div>
+            <div class="column" id="cell15"></div>
+            <div class="column" id="cell16"></div>
+            <div class="column" id="cell17"></div>
+            <div class="column" id="cell18"></div>
+            <div class="column" id="cell19"></div>
+            <div class="column" id="cell20"></div>
+            <div class="column" id="cell21"></div>
         </div>
 
         <div class="row">
-            <div class="slot"></div>
-            <div class="slot"></div>
-            <div class="slot"></div>
-            <div class="slot"></div>
-            <div class="slot"></div>
-            <div class="slot"></div>
-            <div class="slot"></div>
+            <div class="column" id="cell22"></div>
+            <div class="column" id="cell23"></div>
+            <div class="column" id="cell24"></div>
+            <div class="column" id="cell25"></div>
+            <div class="column" id="cell26"></div>
+            <div class="column" id="cell27"></div>
+            <div class="column" id="cell28"></div>
         </div>
 
         <div class="row">
-            <div class="slot"></div>
-            <div class="slot"></div>
-            <div class="slot"></div>
-            <div class="slot"></div>
-            <div class="slot"></div>
-            <div class="slot"></div>
-            <div class="slot"></div>
+            <div class="column" id="cell29"></div>
+            <div class="column" id="cell30"></div>
+            <div class="column" id="cell31"></div>
+            <div class="column" id="cell32"></div>
+            <div class="column" id="cell33"></div>
+            <div class="column" id="cell34"></div>
+            <div class="column" id="cell35"></div>
         </div>
 
         <div class="row">
-            <div class="slot"></div>
-            <div class="slot"></div>
-            <div class="slot"></div>
-            <div class="slot"></div>
-            <div class="slot"></div>
-            <div class="slot"></div>
-            <div class="slot"></div>
+            <div class="column" id="cell36"></div>
+            <div class="column" id="cell37"></div>
+            <div class="column" id="cell38"></div>
+            <div class="column" id="cell39"></div>
+            <div class="column" id="cell40"></div>
+            <div class="column" id="cell41"></div>
+            <div class="column" id="cell42"></div>
         </div>
     </div>
 
