--- a/connect4_index.html
+++ b/connect4_index.html
@@ -9,6 +9,10 @@
     <title>Connect 4</title>
     <link rel="stylesheet" href="connect4_main.css">
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+
 </head>
 
 <body>
@@ -82,7 +86,7 @@
     
     <div class="footer">
         <div>
-            <button type="button" name="button" id="reset-button">Start Again</button>
+            <button type="button" name="button" id="reset-button" onClick="resetGame()">Start Again</button>
         </div>
     </div>
     
