--- a/connect4_index.html
+++ b/connect4_index.html
@@ -19,7 +19,7 @@
 
     <div class="header">
         <h1>Cynthia's Connect 4 Game!</h1>
-        <h2>Player turn is: Player<span id="current-player"> Red</span></h2>
+        <h2>Player turn is: Player <span id="current-player">red</span></h2>
         <h2 id="result"></h2>
     </div>       
 
