winner name updates on scoreboard

--- a/Connect4/connect4_index.html
+++ b/Connect4/connect4_index.html
@@ -91,18 +91,18 @@
     <div class="scoreboard">
         <table>
             <tr class="score-row">
-                <td class="score-column">hello</td>
-                <td class="score-column">hello</td>
+                <td class="score-column" id="hsrow1col1">hello</td>
+                <td class="score-column" id="hsrow1col2">hello</td>
             </tr>
 
             <tr class="score-row">
-                <td class="score-column">hello</td>
-                <td class="score-column">hello</td>
+                <td class="score-column" id="hsrow2col1">hello</td>
+                <td class="score-column" id="hsrow2col2">hello</td>
             </tr>
 
             <tr class="score-row">
-                <td class="score-column">hello</td>
-                <td class="score-column">hello</td>
+                <td class="score-column" id="hsrow3col1">hello</td>
+                <td class="score-column" id="hsrow3col2">hello</td>
             </tr>
         </table>
     </div>
