--- a/Connect4/connect4_index.html
+++ b/Connect4/connect4_index.html
@@ -88,7 +88,7 @@
         </div>
     </div>
 
-   <p id="score-title">** TOP HIGHSCORES **</p>
+   <p id="score-title">** TOP 10 HIGHSCORES **</p>
 
    <ul id="highscore"></ul>
     
