vertical winner from bottom works now

--- a/Connect4/connect4_index.html
+++ b/Connect4/connect4_index.html
@@ -92,8 +92,7 @@
 
    <ul id="highscore"></ul>
     
-    <script src="connect4_uicode.js"></script>
-    <script src="connect4_pure.js"></script>
+    <script src="connect4_code.js"></script>
     <script src="connect4_client.js"></script>
 
 </body>
