separated pure functions from UI logic

--- a/Connect4/connect4_index.html
+++ b/Connect4/connect4_index.html
@@ -93,6 +93,7 @@
    <ul id="highscore"></ul>
     
     <script src="connect4_code.js"></script>
+    <script src="connect4_ui.js"></script>
     <script src="connect4_client.js"></script>
 
 </body>
