row bug fixed, but column bug persists

--- a/Connect4/connect4_index.html
+++ b/Connect4/connect4_index.html
@@ -92,9 +92,9 @@
 
    <ul id="highscore"></ul>
     
-    <script src="connect4_code.js"></script>
-    <script src="connect4_ui.js"></script>
-    <script src="connect4_client.js"></script>
+    <script src="connect4_code.js" type="text/javascript"></script>
+    <script src="connect4_ui.js" type="text/javascript"></script>
+    <script src="connect4_client.js" type="text/javascript"></script>
 
 </body>
 
