--- a/Connect4/connect4_index.html
+++ b/Connect4/connect4_index.html
@@ -17,80 +17,79 @@
 
 <body>
 
-    <div class="header">
+    <header class="header">
         <h1>Cynthia's Connect 4 Game!</h1>
         <h2>Next player turn is: <span id="current-player-name"></span><span id="current-player-colour"></span></h2>
         <h2 id="result"></h2>
-    </div>       
+    </header>       
 
-    <div class="grid">
-        <div class="row">
-            <div class="col" id="row1-col0" onClick="playerClick(event);"></div>
-            <div class="col" id="row1-col1" onClick="playerClick(event);"></div>
-            <div class="col" id="row1-col2" onClick="playerClick(event);"></div>
-            <div class="col" id="row1-col3" onClick="playerClick(event);"></div>
-            <div class="col" id="row1-col4" onClick="playerClick(event);"></div>
-            <div class="col" id="row1-col5" onClick="playerClick(event);"></div>
-            <div class="col" id="row1-col6" onClick="playerClick(event);"></div>
-        </div>
-        <div class=" row">
-            <div class="col" id="row2-col0" onClick="playerClick(event);"></div>
-            <div class="col" id="row2-col1" onClick="playerClick(event);"></div>
-            <div class="col" id="row2-col2" onClick="playerClick(event);"></div>
-            <div class="col" id="row2-col3" onClick="playerClick(event);"></div>
-            <div class="col" id="row2-col4" onClick="playerClick(event);"></div>
-            <div class="col" id="row2-col5" onClick="playerClick(event);"></div>
-            <div class="col" id="row2-col6" onClick="playerClick(event);"></div>
-        </div>
-        <div class="row">
-            <div class="col" id="row3-col0" onClick="playerClick(event);"></div>
-            <div class="col" id="row3-col1" onClick="playerClick(event);"></div>
-            <div class="col" id="row3-col2" onClick="playerClick(event);"></div>
-            <div class="col" id="row3-col3" onClick="playerClick(event);"></div>
-            <div class="col" id="row3-col4" onClick="playerClick(event);"></div>
-            <div class="col" id="row3-col5" onClick="playerClick(event);"></div>
-            <div class="col" id="row3-col6" onClick="playerClick(event);"></div>
-        </div>
-        <div class="row">
-            <div class="col" id="row4-col0" onClick="playerClick(event);"></div>
-            <div class="col" id="row4-col1" onClick="playerClick(event);"></div>
-            <div class="col" id="row4-col2" onClick="playerClick(event);"></div>
-            <div class="col" id="row4-col3" onClick="playerClick(event);"></div>
-            <div class="col" id="row4-col4" onClick="playerClick(event);"></div>
-            <div class="col" id="row4-col5" onClick="playerClick(event);"></div>
-            <div class="col" id="row4-col8" onClick="playerClick(event);"></div>
-        </div>
-        <div class="row">
-            <div class="col" id="row5-col0" onClick="playerClick(event);"></div>
-            <div class="col" id="row5-col1" onClick="playerClick(event);"></div>
-            <div class="col" id="row5-col2" onClick="playerClick(event);"></div>
-            <div class="col" id="row5-col3" onClick="playerClick(event);"></div>
-            <div class="col" id="row5-col4" onClick="playerClick(event);"></div>
-            <div class="col" id="row5-col5" onClick="playerClick(event);"></div>
-            <div class="col" id="row5-col6" onClick="playerClick(event);"></div>
-        </div>
-        <div class="row">
-            <div class="col" id="row6-col0" onClick="playerClick(event);"></div>
-            <div class="col" id="row6-col1" onClick="playerClick(event);"></div>
-            <div class="col" id="row6-col2" onClick="playerClick(event);"></div>
-            <div class="col" id="row6-col3" onClick="playerClick(event);"></div>
-            <div class="col" id="row6-col4" onClick="playerClick(event);"></div>
-            <div class="col" id="row6-col5" onClick="playerClick(event);"></div>
-            <div class="col" id="row6-col6" onClick="playerClick(event);"></div>
-        </div>
-    </div>
+    <main class="grid">
+        <section class="row">
+            <section class="col" id="row1-col0" onClick="playerClick(event);"></section>
+            <section class="col" id="row1-col1" onClick="playerClick(event);"></section>
+            <section class="col" id="row1-col2" onClick="playerClick(event);"></section>
+            <section class="col" id="row1-col3" onClick="playerClick(event);"></section>
+            <section class="col" id="row1-col4" onClick="playerClick(event);"></section>
+            <section class="col" id="row1-col5" onClick="playerClick(event);"></section>
+            <section class="col" id="row1-col6" onClick="playerClick(event);"></section>
+        </section>
+        <section class=" row">
+            <section class="col" id="row2-col0" onClick="playerClick(event);"></section>
+            <section class="col" id="row2-col1" onClick="playerClick(event);"></section>
+            <section class="col" id="row2-col2" onClick="playerClick(event);"></section>
+            <section class="col" id="row2-col3" onClick="playerClick(event);"></section>
+            <section class="col" id="row2-col4" onClick="playerClick(event);"></section>
+            <section class="col" id="row2-col5" onClick="playerClick(event);"></section>
+            <section class="col" id="row2-col6" onClick="playerClick(event);"></section>
+        </section>
+        <section class="row">
+            <section class="col" id="row3-col0" onClick="playerClick(event);"></section>
+            <section class="col" id="row3-col1" onClick="playerClick(event);"></section>
+            <section class="col" id="row3-col2" onClick="playerClick(event);"></section>
+            <section class="col" id="row3-col3" onClick="playerClick(event);"></section>
+            <section class="col" id="row3-col4" onClick="playerClick(event);"></section>
+            <section class="col" id="row3-col5" onClick="playerClick(event);"></section>
+            <section class="col" id="row3-col6" onClick="playerClick(event);"></section>
+        </section>
+        <section class="row">
+            <section class="col" id="row4-col0" onClick="playerClick(event);"></section>
+            <section class="col" id="row4-col1" onClick="playerClick(event);"></section>
+            <section class="col" id="row4-col2" onClick="playerClick(event);"></section>
+            <section class="col" id="row4-col3" onClick="playerClick(event);"></section>
+            <section class="col" id="row4-col4" onClick="playerClick(event);"></section>
+            <section class="col" id="row4-col5" onClick="playerClick(event);"></section>
+            <section class="col" id="row4-col8" onClick="playerClick(event);"></section>
+        </section>
+        <section class="row">
+            <section class="col" id="row5-col0" onClick="playerClick(event);"></section>
+            <section class="col" id="row5-col1" onClick="playerClick(event);"></section>
+            <section class="col" id="row5-col2" onClick="playerClick(event);"></section>
+            <section class="col" id="row5-col3" onClick="playerClick(event);"></section>
+            <section class="col" id="row5-col4" onClick="playerClick(event);"></section>
+            <section class="col" id="row5-col5" onClick="playerClick(event);"></section>
+            <section class="col" id="row5-col6" onClick="playerClick(event);"></section>
+        </section>
+        <section class="row">
+            <section class="col" id="row6-col0" onClick="playerClick(event);"></section>
+            <section class="col" id="row6-col1" onClick="playerClick(event);"></section>
+            <section class="col" id="row6-col2" onClick="playerClick(event);"></section>
+            <section class="col" id="row6-col3" onClick="playerClick(event);"></section>
+            <section class="col" id="row6-col4" onClick="playerClick(event);"></section>
+            <section class="col" id="row6-col5" onClick="playerClick(event);"></section>
+            <section class="col" id="row6-col6" onClick="playerClick(event);"></section>
+        </section>
+    </main>
 
-    
-    <div class="reset">
-        <div>
+    <section class="reset">
+        <section>
             <button type="button" name="button" id="reset-button" onClick="resetBoard(event);">Start Again</button>
-            <!-- <button type="button" name="button" id="update-highscore" onClick="updateHighscore(event)">Update Highscore</button> -->
-        </div>
-    </div>
+        </section>
+    </section>
 
-   <p id="score-title">** TOP 10 HIGHSCORES **</p>
-
-   <ul id="highscore"></ul>
+    <footer>
+        <p id="score-title">** TOP 10 HIGHSCORES **</p>
+        <ul id="highscore"></ul> 
+    </footer>
     
     <script src="connect4_code.js" type="text/javascript"></script>
     <script src="connect4_ui.js" type="text/javascript"></script>
